label-based-routing/back-common/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: back
spec:
  hosts:
  - back
  http:
  - match:
    - sourceLabels: 
        version: v1
    route:
    - destination:
        host: back
        subset: v1v1
      weight: 100
    - destination:
        host: back
        subset: v1v2
      weight: 100
  - match:
    - sourceLabels: 
        version: v2
    route:
    - destination:
        host: back
        subset: v2v1
      weight: 100
    - destination:
        host: back
        subset: v2v2
      weight: 100
